y.output
Terminais sem uso na gramática

   PRINT
   NEGATION
   ERROR


Estado 83 conflitos: 16 de deslocamento/redução
Estado 84 conflitos: 30 de redução/redução
Estado 92 conflitos: 16 de deslocamento/redução
Estado 93 conflitos: 16 de deslocamento/redução
Estado 103 conflitos: 16 de deslocamento/redução
Estado 104 conflitos: 16 de deslocamento/redução


Gramática

    0 $accept: code $end

    1 code: stmts NLINE

    2 stmts: stmt
    3      | stmts stmt
    4      | stmts nlines stmt

    5 stmt: declaracao
    6     | estrutura
    7     | operacao

    8 nlines: NLINE
    9       | nlines NLINE

   10 declaracao: declaracao_escalar
   11           | declaracao_vetorial
   12           | declaracao_matricial

   13 declaracao_escalar: escalar

   14 declaracao_vetorial: vetorial

   15 declaracao_matricial: matricial

   16 operacao: declaracao_escalar ATRIBUITION literal
   17         | declaracao_escalar ATRIBUITION exprecao
   18         | declaracao_vetorial ATRIBUITION vector_literal
   19         | declaracao_matricial ATRIBUITION matrix_literal
   20         | ID INCREMENT
   21         | ID DECREMENT
   22         | ID IMATRIX
   23         | ID TMATRIX
   24         | teste
   25         | conta

   26 exprecao: literal
   27         | lit_logical
   28         | operacao
   29         | ID

   30 teste: exprecao booleano exprecao
   31      | OPARENTHESIS exprecao booleano exprecao CPARENTHESIS

   32 conta: exprecao matematica exprecao
   33      | OPARENTHESIS exprecao matematica exprecao CPARENTHESIS

   34 booleano: EQ
   35         | NE
   36         | GT
   37         | GE
   38         | LT
   39         | LE
   40         | AND
   41         | OR

   42 matematica: SUM
   43           | SUBTRACT
   44           | MULTIPLY
   45           | DIVIDE
   46           | POW
   47           | MODULUS
   48           | CPRODUCT
   49           | SPRODUCT

   50 estrutura: structureif END
   51          | structureif structureelif END
   52          | structureif structureelif structureelse END
   53          | structurefor END
   54          | structurewhile END

   55 structureif: IF OPARENTHESIS exprecao CPARENTHESIS block

   56 structureelif: ELIF OPARENTHESIS exprecao CPARENTHESIS block

   57 structureelse: ELSE block

   58 structurefor: FOR OPARENTHESIS exprecao SEMICOLON exprecao SEMICOLON exprecao CPARENTHESIS block

   59 structurewhile: WHILE OPARENTHESIS exprecao CPARENTHESIS block

   60 block: nlines stmts nlines

   61 dimension: OBRACKET INTEGER CBRACKET

   62 escalar: type ID

   63 vetorial: type ID dimension

   64 matricial: type ID dimension dimension

   65 literal_list: literal
   66             | literal_list COLON literal

   67 vector_literal: OCBRACKET literal_list CCBRACKET
   68               | lit_none

   69 matrix_literal: vector_literal
   70               | OCBRACKET matrix_literal CCBRACKET
   71               | matrix_literal COLON vector_literal

   72 lit_none: NONE

   73 lit_logical: TRUE
   74            | FALSE

   75 literal: INTEGER
   76        | REAL

   77 type: TINT
   78     | TREAL


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
SUM <node> (258) 42
SUBTRACT <node> (259) 43
MULTIPLY <node> (260) 44
DIVIDE <node> (261) 45
POW <node> (262) 46
PRINT <node> (263)
IF <node> (264) 55
ELSE <node> (265) 57
ELIF <node> (266) 56
WHILE <node> (267) 59
FOR <node> (268) 58
END <node> (269) 50 51 52 53 54
TINT <node> (270) 77
TREAL <node> (271) 78
SEMICOLON <node> (272) 58
OPARENTHESIS <node> (273) 31 33 55 56 58 59
CPARENTHESIS <node> (274) 31 33 55 56 58 59
OBRACKET <node> (275) 61
CBRACKET <node> (276) 61
COLON <node> (277) 66 71
NEGATION <node> (278)
ATRIBUITION <node> (279) 16 17 18 19
MODULUS <node> (280) 47
CPRODUCT <node> (281) 48
SPRODUCT <node> (282) 49
TMATRIX <node> (283) 23
IMATRIX <node> (284) 22
EQ <node> (285) 34
NE <node> (286) 35
GT <node> (287) 36
GE <node> (288) 37
LT <node> (289) 38
LE <node> (290) 39
INCREMENT <node> (291) 20
DECREMENT <node> (292) 21
NONE <node> (293) 72
NLINE <node> (294) 1 8 9
ID <node> (295) 20 21 22 23 29 62 63 64
INTEGER <node> (296) 61 75
REAL <node> (297) 76
ERROR <node> (298)
OCBRACKET <node> (299) 67 70
CCBRACKET <node> (300) 67 70
TRUE <node> (301) 73
FALSE <node> (302) 74
AND <node> (303) 40
OR <node> (304) 41


Não terminais com as regras onde eles aparecem

$accept (50)
    à esquerda: 0
code <node> (51)
    à esquerda: 1, à direita: 0
stmts <node> (52)
    à esquerda: 2 3 4, à direita: 1 3 4 60
stmt <node> (53)
    à esquerda: 5 6 7, à direita: 2 3 4
nlines <node> (54)
    à esquerda: 8 9, à direita: 4 9 60
declaracao <node> (55)
    à esquerda: 10 11 12, à direita: 5
declaracao_escalar <node> (56)
    à esquerda: 13, à direita: 10 16 17
declaracao_vetorial <node> (57)
    à esquerda: 14, à direita: 11 18
declaracao_matricial <node> (58)
    à esquerda: 15, à direita: 12 19
operacao <node> (59)
    à esquerda: 16 17 18 19 20 21 22 23 24 25, à direita: 7 28
exprecao <node> (60)
    à esquerda: 26 27 28 29, à direita: 17 30 31 32 33 55 56 58 59
teste <node> (61)
    à esquerda: 30 31, à direita: 24
conta <node> (62)
    à esquerda: 32 33, à direita: 25
booleano <node> (63)
    à esquerda: 34 35 36 37 38 39 40 41, à direita: 30 31
matematica <node> (64)
    à esquerda: 42 43 44 45 46 47 48 49, à direita: 32 33
estrutura <node> (65)
    à esquerda: 50 51 52 53 54, à direita: 6
structureif <node> (66)
    à esquerda: 55, à direita: 50 51 52
structureelif <node> (67)
    à esquerda: 56, à direita: 51 52
structureelse <node> (68)
    à esquerda: 57, à direita: 52
structurefor <node> (69)
    à esquerda: 58, à direita: 53
structurewhile <node> (70)
    à esquerda: 59, à direita: 54
block <node> (71)
    à esquerda: 60, à direita: 55 56 57 58 59
dimension <node> (72)
    à esquerda: 61, à direita: 63 64
escalar <node> (73)
    à esquerda: 62, à direita: 13
vetorial <node> (74)
    à esquerda: 63, à direita: 14
matricial <node> (75)
    à esquerda: 64, à direita: 15
literal_list <node> (76)
    à esquerda: 65 66, à direita: 66 67
vector_literal <node> (77)
    à esquerda: 67 68, à direita: 18 69 71
matrix_literal <node> (78)
    à esquerda: 69 70 71, à direita: 19 70 71
lit_none <node> (79)
    à esquerda: 72, à direita: 68
lit_logical <node> (80)
    à esquerda: 73 74, à direita: 27
literal <node> (81)
    à esquerda: 75 76, à direita: 16 26 65 66
type <node> (82)
    à esquerda: 77 78, à direita: 62 63 64


Estado 0

    0 $accept: . code $end

    IF            deslocar, e ir ao estado 1
    WHILE         deslocar, e ir ao estado 2
    FOR           deslocar, e ir ao estado 3
    TINT          deslocar, e ir ao estado 4
    TREAL         deslocar, e ir ao estado 5
    OPARENTHESIS  deslocar, e ir ao estado 6
    ID            deslocar, e ir ao estado 7
    INTEGER       deslocar, e ir ao estado 8
    REAL          deslocar, e ir ao estado 9
    TRUE          deslocar, e ir ao estado 10
    FALSE         deslocar, e ir ao estado 11

    code                  ir ao estado 12
    stmts                 ir ao estado 13
    stmt                  ir ao estado 14
    declaracao            ir ao estado 15
    declaracao_escalar    ir ao estado 16
    declaracao_vetorial   ir ao estado 17
    declaracao_matricial  ir ao estado 18
    operacao              ir ao estado 19
    exprecao              ir ao estado 20
    teste                 ir ao estado 21
    conta                 ir ao estado 22
    estrutura             ir ao estado 23
    structureif           ir ao estado 24
    structurefor          ir ao estado 25
    structurewhile        ir ao estado 26
    escalar               ir ao estado 27
    vetorial              ir ao estado 28
    matricial             ir ao estado 29
    lit_logical           ir ao estado 30
    literal               ir ao estado 31
    type                  ir ao estado 32


Estado 1

   55 structureif: IF . OPARENTHESIS exprecao CPARENTHESIS block

    OPARENTHESIS  deslocar, e ir ao estado 33


Estado 2

   59 structurewhile: WHILE . OPARENTHESIS exprecao CPARENTHESIS block

    OPARENTHESIS  deslocar, e ir ao estado 34


Estado 3

   58 structurefor: FOR . OPARENTHESIS exprecao SEMICOLON exprecao SEMICOLON exprecao CPARENTHESIS block

    OPARENTHESIS  deslocar, e ir ao estado 35


Estado 4

   77 type: TINT .

    $padrão  reduzir usando a regra 77 (type)


Estado 5

   78 type: TREAL .

    $padrão  reduzir usando a regra 78 (type)


Estado 6

   31 teste: OPARENTHESIS . exprecao booleano exprecao CPARENTHESIS
   33 conta: OPARENTHESIS . exprecao matematica exprecao CPARENTHESIS

    TINT          deslocar, e ir ao estado 4
    TREAL         deslocar, e ir ao estado 5
    OPARENTHESIS  deslocar, e ir ao estado 6
    ID            deslocar, e ir ao estado 7
    INTEGER       deslocar, e ir ao estado 8
    REAL          deslocar, e ir ao estado 9
    TRUE          deslocar, e ir ao estado 10
    FALSE         deslocar, e ir ao estado 11

    declaracao_escalar    ir ao estado 36
    declaracao_vetorial   ir ao estado 37
    declaracao_matricial  ir ao estado 38
    operacao              ir ao estado 39
    exprecao              ir ao estado 40
    teste                 ir ao estado 21
    conta                 ir ao estado 22
    escalar               ir ao estado 27
    vetorial              ir ao estado 28
    matricial             ir ao estado 29
    lit_logical           ir ao estado 30
    literal               ir ao estado 31
    type                  ir ao estado 32


Estado 7

   20 operacao: ID . INCREMENT
   21         | ID . DECREMENT
   22         | ID . IMATRIX
   23         | ID . TMATRIX
   29 exprecao: ID .

    TMATRIX    deslocar, e ir ao estado 41
    IMATRIX    deslocar, e ir ao estado 42
    INCREMENT  deslocar, e ir ao estado 43
    DECREMENT  deslocar, e ir ao estado 44

    $padrão  reduzir usando a regra 29 (exprecao)


Estado 8

   75 literal: INTEGER .

    $padrão  reduzir usando a regra 75 (literal)


Estado 9

   76 literal: REAL .

    $padrão  reduzir usando a regra 76 (literal)


Estado 10

   73 lit_logical: TRUE .

    $padrão  reduzir usando a regra 73 (lit_logical)


Estado 11

   74 lit_logical: FALSE .

    $padrão  reduzir usando a regra 74 (lit_logical)


Estado 12

    0 $accept: code . $end

    $end  deslocar, e ir ao estado 45


Estado 13

    1 code: stmts . NLINE
    3 stmts: stmts . stmt
    4      | stmts . nlines stmt

    IF            deslocar, e ir ao estado 1
    WHILE         deslocar, e ir ao estado 2
    FOR           deslocar, e ir ao estado 3
    TINT          deslocar, e ir ao estado 4
    TREAL         deslocar, e ir ao estado 5
    OPARENTHESIS  deslocar, e ir ao estado 6
    NLINE         deslocar, e ir ao estado 46
    ID            deslocar, e ir ao estado 7
    INTEGER       deslocar, e ir ao estado 8
    REAL          deslocar, e ir ao estado 9
    TRUE          deslocar, e ir ao estado 10
    FALSE         deslocar, e ir ao estado 11

    stmt                  ir ao estado 47
    nlines                ir ao estado 48
    declaracao            ir ao estado 15
    declaracao_escalar    ir ao estado 16
    declaracao_vetorial   ir ao estado 17
    declaracao_matricial  ir ao estado 18
    operacao              ir ao estado 19
    exprecao              ir ao estado 20
    teste                 ir ao estado 21
    conta                 ir ao estado 22
    estrutura             ir ao estado 23
    structureif           ir ao estado 24
    structurefor          ir ao estado 25
    structurewhile        ir ao estado 26
    escalar               ir ao estado 27
    vetorial              ir ao estado 28
    matricial             ir ao estado 29
    lit_logical           ir ao estado 30
    literal               ir ao estado 31
    type                  ir ao estado 32


Estado 14

    2 stmts: stmt .

    $padrão  reduzir usando a regra 2 (stmts)


Estado 15

    5 stmt: declaracao .

    $padrão  reduzir usando a regra 5 (stmt)


Estado 16

   10 declaracao: declaracao_escalar .
   16 operacao: declaracao_escalar . ATRIBUITION literal
   17         | declaracao_escalar . ATRIBUITION exprecao

    ATRIBUITION  deslocar, e ir ao estado 49

    $padrão  reduzir usando a regra 10 (declaracao)


Estado 17

   11 declaracao: declaracao_vetorial .
   18 operacao: declaracao_vetorial . ATRIBUITION vector_literal

    ATRIBUITION  deslocar, e ir ao estado 50

    $padrão  reduzir usando a regra 11 (declaracao)


Estado 18

   12 declaracao: declaracao_matricial .
   19 operacao: declaracao_matricial . ATRIBUITION matrix_literal

    ATRIBUITION  deslocar, e ir ao estado 51

    $padrão  reduzir usando a regra 12 (declaracao)


Estado 19

    7 stmt: operacao .
   28 exprecao: operacao .

    IF            reduzir usando a regra 7 (stmt)
    WHILE         reduzir usando a regra 7 (stmt)
    FOR           reduzir usando a regra 7 (stmt)
    TINT          reduzir usando a regra 7 (stmt)
    TREAL         reduzir usando a regra 7 (stmt)
    OPARENTHESIS  reduzir usando a regra 7 (stmt)
    NLINE         reduzir usando a regra 7 (stmt)
    ID            reduzir usando a regra 7 (stmt)
    INTEGER       reduzir usando a regra 7 (stmt)
    REAL          reduzir usando a regra 7 (stmt)
    TRUE          reduzir usando a regra 7 (stmt)
    FALSE         reduzir usando a regra 7 (stmt)
    $padrão      reduzir usando a regra 28 (exprecao)


Estado 20

   30 teste: exprecao . booleano exprecao
   32 conta: exprecao . matematica exprecao

    SUM       deslocar, e ir ao estado 52
    SUBTRACT  deslocar, e ir ao estado 53
    MULTIPLY  deslocar, e ir ao estado 54
    DIVIDE    deslocar, e ir ao estado 55
    POW       deslocar, e ir ao estado 56
    MODULUS   deslocar, e ir ao estado 57
    CPRODUCT  deslocar, e ir ao estado 58
    SPRODUCT  deslocar, e ir ao estado 59
    EQ        deslocar, e ir ao estado 60
    NE        deslocar, e ir ao estado 61
    GT        deslocar, e ir ao estado 62
    GE        deslocar, e ir ao estado 63
    LT        deslocar, e ir ao estado 64
    LE        deslocar, e ir ao estado 65
    AND       deslocar, e ir ao estado 66
    OR        deslocar, e ir ao estado 67

    booleano    ir ao estado 68
    matematica  ir ao estado 69


Estado 21

   24 operacao: teste .

    $padrão  reduzir usando a regra 24 (operacao)


Estado 22

   25 operacao: conta .

    $padrão  reduzir usando a regra 25 (operacao)


Estado 23

    6 stmt: estrutura .

    $padrão  reduzir usando a regra 6 (stmt)


Estado 24

   50 estrutura: structureif . END
   51          | structureif . structureelif END
   52          | structureif . structureelif structureelse END

    ELIF  deslocar, e ir ao estado 70
    END   deslocar, e ir ao estado 71

    structureelif  ir ao estado 72


Estado 25

   53 estrutura: structurefor . END

    END  deslocar, e ir ao estado 73


Estado 26

   54 estrutura: structurewhile . END

    END  deslocar, e ir ao estado 74


Estado 27

   13 declaracao_escalar: escalar .

    $padrão  reduzir usando a regra 13 (declaracao_escalar)


Estado 28

   14 declaracao_vetorial: vetorial .

    $padrão  reduzir usando a regra 14 (declaracao_vetorial)


Estado 29

   15 declaracao_matricial: matricial .

    $padrão  reduzir usando a regra 15 (declaracao_matricial)


Estado 30

   27 exprecao: lit_logical .

    $padrão  reduzir usando a regra 27 (exprecao)


Estado 31

   26 exprecao: literal .

    $padrão  reduzir usando a regra 26 (exprecao)


Estado 32

   62 escalar: type . ID
   63 vetorial: type . ID dimension
   64 matricial: type . ID dimension dimension

    ID  deslocar, e ir ao estado 75


Estado 33

   55 structureif: IF OPARENTHESIS . exprecao CPARENTHESIS block

    TINT          deslocar, e ir ao estado 4
    TREAL         deslocar, e ir ao estado 5
    OPARENTHESIS  deslocar, e ir ao estado 6
    ID            deslocar, e ir ao estado 7
    INTEGER       deslocar, e ir ao estado 8
    REAL          deslocar, e ir ao estado 9
    TRUE          deslocar, e ir ao estado 10
    FALSE         deslocar, e ir ao estado 11

    declaracao_escalar    ir ao estado 36
    declaracao_vetorial   ir ao estado 37
    declaracao_matricial  ir ao estado 38
    operacao              ir ao estado 39
    exprecao              ir ao estado 76
    teste                 ir ao estado 21
    conta                 ir ao estado 22
    escalar               ir ao estado 27
    vetorial              ir ao estado 28
    matricial             ir ao estado 29
    lit_logical           ir ao estado 30
    literal               ir ao estado 31
    type                  ir ao estado 32


Estado 34

   59 structurewhile: WHILE OPARENTHESIS . exprecao CPARENTHESIS block

    TINT          deslocar, e ir ao estado 4
    TREAL         deslocar, e ir ao estado 5
    OPARENTHESIS  deslocar, e ir ao estado 6
    ID            deslocar, e ir ao estado 7
    INTEGER       deslocar, e ir ao estado 8
    REAL          deslocar, e ir ao estado 9
    TRUE          deslocar, e ir ao estado 10
    FALSE         deslocar, e ir ao estado 11

    declaracao_escalar    ir ao estado 36
    declaracao_vetorial   ir ao estado 37
    declaracao_matricial  ir ao estado 38
    operacao              ir ao estado 39
    exprecao              ir ao estado 77
    teste                 ir ao estado 21
    conta                 ir ao estado 22
    escalar               ir ao estado 27
    vetorial              ir ao estado 28
    matricial             ir ao estado 29
    lit_logical           ir ao estado 30
    literal               ir ao estado 31
    type                  ir ao estado 32


Estado 35

   58 structurefor: FOR OPARENTHESIS . exprecao SEMICOLON exprecao SEMICOLON exprecao CPARENTHESIS block

    TINT          deslocar, e ir ao estado 4
    TREAL         deslocar, e ir ao estado 5
    OPARENTHESIS  deslocar, e ir ao estado 6
    ID            deslocar, e ir ao estado 7
    INTEGER       deslocar, e ir ao estado 8
    REAL          deslocar, e ir ao estado 9
    TRUE          deslocar, e ir ao estado 10
    FALSE         deslocar, e ir ao estado 11

    declaracao_escalar    ir ao estado 36
    declaracao_vetorial   ir ao estado 37
    declaracao_matricial  ir ao estado 38
    operacao              ir ao estado 39
    exprecao              ir ao estado 78
    teste                 ir ao estado 21
    conta                 ir ao estado 22
    escalar               ir ao estado 27
    vetorial              ir ao estado 28
    matricial             ir ao estado 29
    lit_logical           ir ao estado 30
    literal               ir ao estado 31
    type                  ir ao estado 32


Estado 36

   16 operacao: declaracao_escalar . ATRIBUITION literal
   17         | declaracao_escalar . ATRIBUITION exprecao

    ATRIBUITION  deslocar, e ir ao estado 49


Estado 37

   18 operacao: declaracao_vetorial . ATRIBUITION vector_literal

    ATRIBUITION  deslocar, e ir ao estado 50


Estado 38

   19 operacao: declaracao_matricial . ATRIBUITION matrix_literal

    ATRIBUITION  deslocar, e ir ao estado 51


Estado 39

   28 exprecao: operacao .

    $padrão  reduzir usando a regra 28 (exprecao)


Estado 40

   30 teste: exprecao . booleano exprecao
   31      | OPARENTHESIS exprecao . booleano exprecao CPARENTHESIS
   32 conta: exprecao . matematica exprecao
   33      | OPARENTHESIS exprecao . matematica exprecao CPARENTHESIS

    SUM       deslocar, e ir ao estado 52
    SUBTRACT  deslocar, e ir ao estado 53
    MULTIPLY  deslocar, e ir ao estado 54
    DIVIDE    deslocar, e ir ao estado 55
    POW       deslocar, e ir ao estado 56
    MODULUS   deslocar, e ir ao estado 57
    CPRODUCT  deslocar, e ir ao estado 58
    SPRODUCT  deslocar, e ir ao estado 59
    EQ        deslocar, e ir ao estado 60
    NE        deslocar, e ir ao estado 61
    GT        deslocar, e ir ao estado 62
    GE        deslocar, e ir ao estado 63
    LT        deslocar, e ir ao estado 64
    LE        deslocar, e ir ao estado 65
    AND       deslocar, e ir ao estado 66
    OR        deslocar, e ir ao estado 67

    booleano    ir ao estado 79
    matematica  ir ao estado 80


Estado 41

   23 operacao: ID TMATRIX .

    $padrão  reduzir usando a regra 23 (operacao)


Estado 42

   22 operacao: ID IMATRIX .

    $padrão  reduzir usando a regra 22 (operacao)


Estado 43

   20 operacao: ID INCREMENT .

    $padrão  reduzir usando a regra 20 (operacao)


Estado 44

   21 operacao: ID DECREMENT .

    $padrão  reduzir usando a regra 21 (operacao)


Estado 45

    0 $accept: code $end .

    $padrão  aceitar


Estado 46

    1 code: stmts NLINE .
    8 nlines: NLINE .

    $end      reduzir usando a regra 1 (code)
    $padrão  reduzir usando a regra 8 (nlines)


Estado 47

    3 stmts: stmts stmt .

    $padrão  reduzir usando a regra 3 (stmts)


Estado 48

    4 stmts: stmts nlines . stmt
    9 nlines: nlines . NLINE

    IF            deslocar, e ir ao estado 1
    WHILE         deslocar, e ir ao estado 2
    FOR           deslocar, e ir ao estado 3
    TINT          deslocar, e ir ao estado 4
    TREAL         deslocar, e ir ao estado 5
    OPARENTHESIS  deslocar, e ir ao estado 6
    NLINE         deslocar, e ir ao estado 81
    ID            deslocar, e ir ao estado 7
    INTEGER       deslocar, e ir ao estado 8
    REAL          deslocar, e ir ao estado 9
    TRUE          deslocar, e ir ao estado 10
    FALSE         deslocar, e ir ao estado 11

    stmt                  ir ao estado 82
    declaracao            ir ao estado 15
    declaracao_escalar    ir ao estado 16
    declaracao_vetorial   ir ao estado 17
    declaracao_matricial  ir ao estado 18
    operacao              ir ao estado 19
    exprecao              ir ao estado 20
    teste                 ir ao estado 21
    conta                 ir ao estado 22
    estrutura             ir ao estado 23
    structureif           ir ao estado 24
    structurefor          ir ao estado 25
    structurewhile        ir ao estado 26
    escalar               ir ao estado 27
    vetorial              ir ao estado 28
    matricial             ir ao estado 29
    lit_logical           ir ao estado 30
    literal               ir ao estado 31
    type                  ir ao estado 32


Estado 49

   16 operacao: declaracao_escalar ATRIBUITION . literal
   17         | declaracao_escalar ATRIBUITION . exprecao

    TINT          deslocar, e ir ao estado 4
    TREAL         deslocar, e ir ao estado 5
    OPARENTHESIS  deslocar, e ir ao estado 6
    ID            deslocar, e ir ao estado 7
    INTEGER       deslocar, e ir ao estado 8
    REAL          deslocar, e ir ao estado 9
    TRUE          deslocar, e ir ao estado 10
    FALSE         deslocar, e ir ao estado 11

    declaracao_escalar    ir ao estado 36
    declaracao_vetorial   ir ao estado 37
    declaracao_matricial  ir ao estado 38
    operacao              ir ao estado 39
    exprecao              ir ao estado 83
    teste                 ir ao estado 21
    conta                 ir ao estado 22
    escalar               ir ao estado 27
    vetorial              ir ao estado 28
    matricial             ir ao estado 29
    lit_logical           ir ao estado 30
    literal               ir ao estado 84
    type                  ir ao estado 32


Estado 50

   18 operacao: declaracao_vetorial ATRIBUITION . vector_literal

    NONE       deslocar, e ir ao estado 85
    OCBRACKET  deslocar, e ir ao estado 86

    vector_literal  ir ao estado 87
    lit_none        ir ao estado 88


Estado 51

   19 operacao: declaracao_matricial ATRIBUITION . matrix_literal

    NONE       deslocar, e ir ao estado 85
    OCBRACKET  deslocar, e ir ao estado 89

    vector_literal  ir ao estado 90
    matrix_literal  ir ao estado 91
    lit_none        ir ao estado 88


Estado 52

   42 matematica: SUM .

    $padrão  reduzir usando a regra 42 (matematica)


Estado 53

   43 matematica: SUBTRACT .

    $padrão  reduzir usando a regra 43 (matematica)


Estado 54

   44 matematica: MULTIPLY .

    $padrão  reduzir usando a regra 44 (matematica)


Estado 55

   45 matematica: DIVIDE .

    $padrão  reduzir usando a regra 45 (matematica)


Estado 56

   46 matematica: POW .

    $padrão  reduzir usando a regra 46 (matematica)


Estado 57

   47 matematica: MODULUS .

    $padrão  reduzir usando a regra 47 (matematica)


Estado 58

   48 matematica: CPRODUCT .

    $padrão  reduzir usando a regra 48 (matematica)


Estado 59

   49 matematica: SPRODUCT .

    $padrão  reduzir usando a regra 49 (matematica)


Estado 60

   34 booleano: EQ .

    $padrão  reduzir usando a regra 34 (booleano)


Estado 61

   35 booleano: NE .

    $padrão  reduzir usando a regra 35 (booleano)


Estado 62

   36 booleano: GT .

    $padrão  reduzir usando a regra 36 (booleano)


Estado 63

   37 booleano: GE .

    $padrão  reduzir usando a regra 37 (booleano)


Estado 64

   38 booleano: LT .

    $padrão  reduzir usando a regra 38 (booleano)


Estado 65

   39 booleano: LE .

    $padrão  reduzir usando a regra 39 (booleano)


Estado 66

   40 booleano: AND .

    $padrão  reduzir usando a regra 40 (booleano)


Estado 67

   41 booleano: OR .

    $padrão  reduzir usando a regra 41 (booleano)


Estado 68

   30 teste: exprecao booleano . exprecao

    TINT          deslocar, e ir ao estado 4
    TREAL         deslocar, e ir ao estado 5
    OPARENTHESIS  deslocar, e ir ao estado 6
    ID            deslocar, e ir ao estado 7
    INTEGER       deslocar, e ir ao estado 8
    REAL          deslocar, e ir ao estado 9
    TRUE          deslocar, e ir ao estado 10
    FALSE         deslocar, e ir ao estado 11

    declaracao_escalar    ir ao estado 36
    declaracao_vetorial   ir ao estado 37
    declaracao_matricial  ir ao estado 38
    operacao              ir ao estado 39
    exprecao              ir ao estado 92
    teste                 ir ao estado 21
    conta                 ir ao estado 22
    escalar               ir ao estado 27
    vetorial              ir ao estado 28
    matricial             ir ao estado 29
    lit_logical           ir ao estado 30
    literal               ir ao estado 31
    type                  ir ao estado 32


Estado 69

   32 conta: exprecao matematica . exprecao

    TINT          deslocar, e ir ao estado 4
    TREAL         deslocar, e ir ao estado 5
    OPARENTHESIS  deslocar, e ir ao estado 6
    ID            deslocar, e ir ao estado 7
    INTEGER       deslocar, e ir ao estado 8
    REAL          deslocar, e ir ao estado 9
    TRUE          deslocar, e ir ao estado 10
    FALSE         deslocar, e ir ao estado 11

    declaracao_escalar    ir ao estado 36
    declaracao_vetorial   ir ao estado 37
    declaracao_matricial  ir ao estado 38
    operacao              ir ao estado 39
    exprecao              ir ao estado 93
    teste                 ir ao estado 21
    conta                 ir ao estado 22
    escalar               ir ao estado 27
    vetorial              ir ao estado 28
    matricial             ir ao estado 29
    lit_logical           ir ao estado 30
    literal               ir ao estado 31
    type                  ir ao estado 32


Estado 70

   56 structureelif: ELIF . OPARENTHESIS exprecao CPARENTHESIS block

    OPARENTHESIS  deslocar, e ir ao estado 94


Estado 71

   50 estrutura: structureif END .

    $padrão  reduzir usando a regra 50 (estrutura)


Estado 72

   51 estrutura: structureif structureelif . END
   52          | structureif structureelif . structureelse END

    ELSE  deslocar, e ir ao estado 95
    END   deslocar, e ir ao estado 96

    structureelse  ir ao estado 97


Estado 73

   53 estrutura: structurefor END .

    $padrão  reduzir usando a regra 53 (estrutura)


Estado 74

   54 estrutura: structurewhile END .

    $padrão  reduzir usando a regra 54 (estrutura)


Estado 75

   62 escalar: type ID .
   63 vetorial: type ID . dimension
   64 matricial: type ID . dimension dimension

    OBRACKET  deslocar, e ir ao estado 98

    $padrão  reduzir usando a regra 62 (escalar)

    dimension  ir ao estado 99


Estado 76

   30 teste: exprecao . booleano exprecao
   32 conta: exprecao . matematica exprecao
   55 structureif: IF OPARENTHESIS exprecao . CPARENTHESIS block

    SUM           deslocar, e ir ao estado 52
    SUBTRACT      deslocar, e ir ao estado 53
    MULTIPLY      deslocar, e ir ao estado 54
    DIVIDE        deslocar, e ir ao estado 55
    POW           deslocar, e ir ao estado 56
    CPARENTHESIS  deslocar, e ir ao estado 100
    MODULUS       deslocar, e ir ao estado 57
    CPRODUCT      deslocar, e ir ao estado 58
    SPRODUCT      deslocar, e ir ao estado 59
    EQ            deslocar, e ir ao estado 60
    NE            deslocar, e ir ao estado 61
    GT            deslocar, e ir ao estado 62
    GE            deslocar, e ir ao estado 63
    LT            deslocar, e ir ao estado 64
    LE            deslocar, e ir ao estado 65
    AND           deslocar, e ir ao estado 66
    OR            deslocar, e ir ao estado 67

    booleano    ir ao estado 68
    matematica  ir ao estado 69


Estado 77

   30 teste: exprecao . booleano exprecao
   32 conta: exprecao . matematica exprecao
   59 structurewhile: WHILE OPARENTHESIS exprecao . CPARENTHESIS block

    SUM           deslocar, e ir ao estado 52
    SUBTRACT      deslocar, e ir ao estado 53
    MULTIPLY      deslocar, e ir ao estado 54
    DIVIDE        deslocar, e ir ao estado 55
    POW           deslocar, e ir ao estado 56
    CPARENTHESIS  deslocar, e ir ao estado 101
    MODULUS       deslocar, e ir ao estado 57
    CPRODUCT      deslocar, e ir ao estado 58
    SPRODUCT      deslocar, e ir ao estado 59
    EQ            deslocar, e ir ao estado 60
    NE            deslocar, e ir ao estado 61
    GT            deslocar, e ir ao estado 62
    GE            deslocar, e ir ao estado 63
    LT            deslocar, e ir ao estado 64
    LE            deslocar, e ir ao estado 65
    AND           deslocar, e ir ao estado 66
    OR            deslocar, e ir ao estado 67

    booleano    ir ao estado 68
    matematica  ir ao estado 69


Estado 78

   30 teste: exprecao . booleano exprecao
   32 conta: exprecao . matematica exprecao
   58 structurefor: FOR OPARENTHESIS exprecao . SEMICOLON exprecao SEMICOLON exprecao CPARENTHESIS block

    SUM        deslocar, e ir ao estado 52
    SUBTRACT   deslocar, e ir ao estado 53
    MULTIPLY   deslocar, e ir ao estado 54
    DIVIDE     deslocar, e ir ao estado 55
    POW        deslocar, e ir ao estado 56
    SEMICOLON  deslocar, e ir ao estado 102
    MODULUS    deslocar, e ir ao estado 57
    CPRODUCT   deslocar, e ir ao estado 58
    SPRODUCT   deslocar, e ir ao estado 59
    EQ         deslocar, e ir ao estado 60
    NE         deslocar, e ir ao estado 61
    GT         deslocar, e ir ao estado 62
    GE         deslocar, e ir ao estado 63
    LT         deslocar, e ir ao estado 64
    LE         deslocar, e ir ao estado 65
    AND        deslocar, e ir ao estado 66
    OR         deslocar, e ir ao estado 67

    booleano    ir ao estado 68
    matematica  ir ao estado 69


Estado 79

   30 teste: exprecao booleano . exprecao
   31      | OPARENTHESIS exprecao booleano . exprecao CPARENTHESIS

    TINT          deslocar, e ir ao estado 4
    TREAL         deslocar, e ir ao estado 5
    OPARENTHESIS  deslocar, e ir ao estado 6
    ID            deslocar, e ir ao estado 7
    INTEGER       deslocar, e ir ao estado 8
    REAL          deslocar, e ir ao estado 9
    TRUE          deslocar, e ir ao estado 10
    FALSE         deslocar, e ir ao estado 11

    declaracao_escalar    ir ao estado 36
    declaracao_vetorial   ir ao estado 37
    declaracao_matricial  ir ao estado 38
    operacao              ir ao estado 39
    exprecao              ir ao estado 103
    teste                 ir ao estado 21
    conta                 ir ao estado 22
    escalar               ir ao estado 27
    vetorial              ir ao estado 28
    matricial             ir ao estado 29
    lit_logical           ir ao estado 30
    literal               ir ao estado 31
    type                  ir ao estado 32

